--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>Flomo</title>
     </head>
     <body>
         <div id="root"></div>
